file(GLOB samples RELATIVE ${CMAKE_CURRENT_SOURCE_DIR} *.cpp)
foreach(sample ${samples})
    get_filename_component(exe ${sample} NAME_WE)
	add_executable(${exe} ${sample})
	target_link_libraries(${exe} LIBS)
	if(MPI_FOUND)
		target_link_libraries(${exe} ${MPI_LIBRARIES})

		if(MPI_COMPILE_FLAGS)
		set_target_properties(${exe} PROPERTIES COMPILE_FLAGS "${MPI_COMPILE_FLAGS}")
		endif()

		if(MPI_LINK_FLAGS)
		set_target_properties(${exe} PROPERTIES LINK_FLAGS "${MPI_LINK_FLAGS}")
		endif()
	else(MPI_FOUND)
		target_link_libraries(${exe} MPI_LIB)
	endif(MPI_FOUND)
endforeach()